Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 2,701
    • Issues 2,701
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 910
    • Merge requests 910
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • Mesa
  • mesamesa
  • Issues
  • #5709
Closed
Open
Created Dec 03, 2021 by Olivier Fourdan@ofourdan🛠Reporter

[bisected] Mesa 21.3.x breaks GBM with NVIDIA closed source driver 495.44

Description

  • Fedora 35
  • mesa 21.3.1
  • mutter from branch gnome-41 current with https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/2067
  • NVIDIA proprietary driver 495.44

mutter fails to start with Failed to allocate onscreen framebuffer for /dev/dri/card0: Failed to allocate surface

This is a regression in mesa 21.3.1, was working fine with mesa 21.2.5.

I ran a git bisect which gives:

d50b47a14e94751cd59ad5892ad795d508557f0 is the first bad commit
commit ad50b47a14e94751cd59ad5892ad795d508557f0
Author: Simon Ser <contact@emersion.fr>
Date:   Fri Aug 27 15:03:39 2021 +0200

    gbm: assume USE_SCANOUT in create_with_modifiers
    
    gbm_{bo,surface}_create_with_modifiers doesn't allow callers to
    pass usage flags. Assume USE_SCANOUT since this is what most
    callers want.
    
    Bump the GBM ABI version so that other backends can discover when
    the usage flags can be used.
    
    Signed-off-by: Simon Ser <contact@emersion.fr>
    Reviewed-by: James Jones <jajones@nvidia.com>
    Reviewed-by: Daniel Stone <daniels@collabora.com>
    Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/3197>

 src/gbm/main/gbm.c             |  5 +++--
 src/gbm/main/gbm_abi_check.c   |  9 +++++++--
 src/gbm/main/gbm_backend_abi.h | 10 +++++++++-
 3 files changed, 19 insertions(+), 5 deletions(-)

cc: @emersion, @cubanismo

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking